Use the Set.of method introduced in Java 9